src/graphql_schema/snapshots/tyorka_admin__graphql_schema__queries__entity_order__asc.snap
---
source: src/graphql_schema/queries.rs
expression: response.data.into_json().unwrap()
---
{
  "gallery": [
    {
      "id": "1"
    },
    {
      "id": "2"
    }
  ]
}
