src/graphql_schema/snapshots/tyorka_admin__graphql_schema__queries__entity_order__shop_desc.snap
---
source: src/graphql_schema/queries.rs
expression: response.data.into_json().unwrap()
---
{
  "shop": [
    {
      "id": "2"
    },
    {
      "id": "1"
    }
  ]
}
